--- a/app.json
+++ b/app.json
@@ -19,6 +19,9 @@
     "ios": {
       "supportsTablet": true
     },
+    "android": {
+      "permissions": ["VIBRATE"]
+    },
     "web": {
       "favicon": "./assets/favicon.png"
     }
