--- a/app.json
+++ b/app.json
@@ -20,6 +20,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.muskcoding.goalsmanager",
+      "versionCode": 1,
       "permissions": ["VIBRATE"]
     },
     "web": {
